--- a/src/index-mob.css
+++ b/src/index-mob.css
@@ -16,7 +16,7 @@
 .mobile-box {
   width: 80%;
   max-width: 480px;
-  height: 80vh;
+  height: 75vh;
   padding: 16px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   border-radius: 12px;
@@ -40,7 +40,7 @@
 
 .profile-mobile img {
   width: 100%;
-  max-width: 230px;
+  max-width: 90%;
   height: auto;
   border-radius: 12px;
   margin-bottom: 15px;
@@ -149,8 +149,8 @@
 .btn-pdf { background: rgba(51, 87, 204, 0.8); }
 
 .scroll-arrow {
-  margin-top: 12px;
-  margin-bottom: 20px;
+  margin-top: 14px;
+  margin-bottom: 40px;
   font-size: 2rem;
   color: #ffffff;
   background: transparent;
