--- a/src/index-mob.css
+++ b/src/index-mob.css
@@ -68,6 +68,15 @@
   overflow-y: auto;
 }
 
+.about-mobile {
+  display: flex;
+  flex-direction: column;
+  gap: 1px;
+  padding: 16px 12px 12px 12px;
+  width: 90%;
+  color: #ffffff;
+}
+
 .mobile-heading {
   font-size: 1.4rem;
   font-weight: 600;
